[project]
name = "pywombat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Freddy Cliquet", email = "fcliquet@pasteur.fr" }]
requires-python = ">=3.12"
dependencies = ["polars>=0.19.0", "click>=8.1.0", "pyyaml>=6.0"]

[project.scripts]
wombat = "pywombat.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
